@@ -13,6 +13,7 @@ Version 1.0.10 to be released
 - Bug #596: CActiveFinder undefined $parent variable on line 1297 (Qiang)
 - Bug: Fixed a bug in Oracle driver when performing relational AR queries (Qiang)
 - Enh #585: Added CChainedCacheDependency::setDependencies() (Qiang)
+- Enh #598: Added CCaptchaAction::transparent (Qiang)
 - Enh #613: Enhanced Oracle driver to allow using views with AR (Qiang)
 - Enh: Enhanced CRequiredValidator so that it can validate an attribute contains the specified value (Qiang)
 - Chg: Made request and urlManager components to be available for both console and web applications (Qiang)
